// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the button with icon 1`] = `
<button
  class="button secondary"
  type="button"
>
  <span
    aria-label="su-plus"
    class="buttonIcon su-plus"
  />
  <span
    class="text"
  >
    Add something
  </span>
</button>
`;

exports[`Should render with skin icon 1`] = `
<button
  class="button icon"
  type="button"
>
  <span
    class="text"
  />
</button>
`;

exports[`Should render with skin icon and active 1`] = `
<button
  class="button icon active"
  type="button"
>
  <span
    class="text"
  />
</button>
`;

exports[`Should render with skin icon and dropdown icon 1`] = `
<button
  class="button icon"
  type="button"
>
  <span
    aria-label="su-angle-down"
    class="buttonIcon dropdownIcon su-angle-down"
  />
</button>
`;

exports[`Should render with skin link 1`] = `
<button
  class="button link"
  type="button"
>
  <span
    class="text"
  />
</button>
`;

exports[`Should render with skin link and dropdown icon 1`] = `
<button
  class="button link"
  type="button"
>
  <span
    aria-label="su-angle-down"
    class="buttonIcon dropdownIcon su-angle-down"
  />
</button>
`;

exports[`Should render with skin primary 1`] = `
<button
  class="button primary"
  type="button"
>
  <span
    class="text"
  />
</button>
`;

exports[`Should render with skin primary and dropdown icon 1`] = `
<button
  class="button primary"
  type="button"
>
  <span
    aria-label="su-angle-down"
    class="buttonIcon dropdownIcon su-angle-down"
  />
</button>
`;

exports[`Should render with skin secondary 1`] = `
<button
  class="button secondary"
  type="button"
>
  <span
    class="text"
  />
</button>
`;

exports[`Should render with skin secondary and dropdown icon 1`] = `
<button
  class="button secondary"
  type="button"
>
  <span
    aria-label="su-angle-down"
    class="buttonIcon dropdownIcon su-angle-down"
  />
</button>
`;

exports[`should render disabled with skin secondary 1`] = `
<button
  class="button secondary"
  disabled=""
  type="button"
>
  <span
    class="text"
  />
</button>
`;
